# docs/swagger.json
@@ -729,6 +729,15 @@
                         "name": "X-Session-ID",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "description": "checkout request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/go-shop-backend_internal_dto.OrderCheckoutRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -2454,6 +2463,47 @@
                 }
             }
         },
+        "go-shop-backend_internal_dto.AddressResponse": {
+            "type": "object",
+            "properties": {
+                "city": {
+                    "type": "string"
+                },
+                "comment": {
+                    "type": "string"
+                },
+                "country": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "entrance": {
+                    "type": "string"
+                },
+                "floor": {
+                    "type": "string"
+                },
+                "house": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "is_default": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "street": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
         "go-shop-backend_internal_dto.CategoryResponse": {
             "type": "object",
             "properties": {
@@ -2563,11 +2613,19 @@
         "go-shop-backend_internal_dto.CreatePaymentRequest": {
             "type": "object",
             "required": [
-                "order_id"
+                "order_id",
+                "type"
             ],
             "properties": {
                 "order_id": {
                     "type": "string"
+                },
+                "type": {
+                    "type": "string",
+                    "enum": [
+                        "redirect",
+                        "embedded"
+                    ]
                 }
             }
         },
@@ -2598,6 +2656,17 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "go-shop-backend_internal_dto.OrderCheckoutRequest": {
+            "type": "object",
+            "required": [
+                "address_id"
+            ],
+            "properties": {
+                "address_id": {
                     "type": "string"
                 }
             }
@@ -2647,6 +2716,9 @@
         "go-shop-backend_internal_dto.OrderResponse": {
             "type": "object",
             "properties": {
+                "address": {
+                    "$ref": "#/definitions/go-shop-backend_internal_dto.AddressResponse"
+                },
                 "canceled_at": {
                     "type": "string"
                 },
@@ -3000,8 +3072,14 @@
                 "access_token": {
                     "type": "string"
                 },
+                "access_token_expires_at": {
+                    "type": "integer"
+                },
                 "refresh_token": {
                     "type": "string"
+                },
+                "refresh_token_expires_at": {
+                    "type": "integer"
                 },
                 "token_type": {
                     "type": "string"
